--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-/* *{
-    z-index: 0;
-} */
-
 .f-height {
   height: 100%;
 }
@@ -17,4 +13,7 @@
   border-style: solid;
   border-color: #ff5200;
   background-color: white;
+}
+.APP{
+  width: 100%;
 }
