--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -1,15 +1,30 @@
+.footer-box {
+  background-color: rgb(240, 240, 245);
+}
+.footer-content-box {
+  margin: 0 60px;
+}
+.list-style {
+  list-style: none;
+}
+li {
+  cursor: pointer;
+}
+.foterImg1 {
+  height: 64px;
+  width: 208px;
+}
 
+@media (max-width: 768px) {
+  .foterImg {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+  }
 
-.footer-box{
-    /* background-color: #dde5eb; */
-    background-color: rgb(240, 240, 245);
-}
-.footer-content-box{
-    margin: 0 60px;
-}
-.list-style{
-    list-style: none;
-}
-li{
-    cursor: pointer;
+  .dFlexCol {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+  }
 }
